Clear panel nav, Fix balance spacing, Update deps (#895)

--- a/app/App/Main/Account/Balances/style/index.styl
+++ b/app/App/Main/Account/Balances/style/index.styl
@@ -160,14 +160,14 @@
   .signerBalanceIcon
     position absolute
     top 16px
-    left 14px
+    left 10px
 
   .signerBalanceCurrency
     position absolute
-    left 68px
+    left 62px
     top 9px
     right 125px
-    font-size 13px
+    font-size 14px
     display flex
     align-items center
     font-weight 600
@@ -176,8 +176,8 @@
 
   .signerBalanceChain
     position absolute
-    left 69px
-    top 31px
+    left 60px
+    top 30px
     font-size 9px
     display flex
     align-items center
@@ -187,12 +187,16 @@
     text-transform uppercase
     letter-spacing 2px
     height 10px
+    background var(--ghostC)
+    height 12px
+    padding 0px 5px 0px 7px
+    border-radius 8px
    
   .signerBalancePrice
     position absolute
     right 10px
     bottom 10px
-    left 68px
+    left 62px
     font-size 11px
     font-weight 600
     color var(--outerspace06)
@@ -214,6 +218,7 @@
     display flex
     align-items center
     color var(--outerspace)
+    margin-left -2px
 
   .signerBalanceCurrentPriceChange
     display flex
